Problem not solved yet - backgound image is not showing

--- a/wwwroot/content/site.css
+++ b/wwwroot/content/site.css
@@ -1,9 +1,10 @@
-﻿bbody {
+﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url('/images/pattern.png');
+    background-image: url("../images/pattern.png");
     background-repeat: repeat;
-}
+    display:block;
+    }
 
 .body-content {
     padding-left: 15px;
